# slither-plugin-tainted-storage

./: README.md  pyproject.toml
.github/workflows/: ci.yml
slither_tainted_storage/: __init__.py
slither_tainted_storage/detectors/: tainted_storage.py
storage_drift/: __init__.py
storage_drift/detectors/: drift_detector.py
tests/: helpers.py  test_complex_contracts.py  test_real_contracts.py  test_storage_drift.py  test_tainted_storage.py
tests/contracts/: BalanceTaint.sol  ComplexFlows.sol  Create2Factory.sol  Create2Taint.sol  CrossFunction.sol  EdgeCases.sol  GasMeter.sol  GasleftTaint.sol  IntraCallTaint.sol  MixedTaint.sol  PackedStorage.sol  RealisticVault.sol  TaintLaundering.sol
