[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slither-tainted-storage"
version = "0.1.0"
description = "Detects storage slots tainted by gas-dependent values, gas-related globals, CREATE2 addresses, or sender balances."
license = "AGPL-3.0-only"
requires-python = ">=3.9"
dependencies = ["slither-analyzer>=0.6.0"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.entry-points."slither_analyzer.plugin"]
slither_tainted_storage = "slither_tainted_storage:make_plugin"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
